@@ -92,7 +92,7 @@
 			value='transient' />
 	</property_group>
 
-	<stability value='Uncommitted' />
+	<stability value='Evolving' />
 
 	<template>
 		<common_name>
